--- a/assets/scss/_admin.scss
+++ b/assets/scss/_admin.scss
@@ -17,3 +17,35 @@
 #searchInput:focus {
   border-bottom: 2px solid #4575b6;
 }
+#delete_modal{
+  display: none;
+}
+.delete-show{
+  display: flex !important;
+}
+.blog-content{
+  overflow: hidden;
+  max-height: 8rem;
+  -webkit-box-orient: vertical;
+  display: block;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 4;
+}
+pre{
+  display: block;
+    font-family: inherit !important;
+    white-space: pre-line;
+    margin: 1em 0;
+}
+// .lg\:w-2\/5 {
+//   width: 100%;
+// }
+// .blog-mob{
+//   flex-direction: column;
+// }
+// @media (min-width: 1024px){
+//   .lg\:w-2\/5 {
+//       width: 40%;
+//   }
+// }
